        - Melhora visual do menu de login
        - Substituição do vector por multiset nas telas
        - Implementação de atalhos: TAB para alternar campos e ENTER para confirmar

    Matsura (src, include) :
        - Bitmap de coroa para indicar jogadores com o maior score
        - Reorganização visual da localização dos textos com o novo fundo
        - Correção de bug de segmentation fault

    Sam (image, game_loop):
        - Padronizados os metodos de set do TAD image (exceto posição)
        - Adicionado um draw com scale para o image (tinha esquecido de implementar)
        - Mais algumas adições ao menu de morte
            - Layout dos pontos está pronto, só falta mostrar a pontuação
            - Botão de jogar de novo ja aparece junto com a tela de morte, mas ainda não responde ao clique
            - Botões de home e achievements não estão se movendo junto com a tela de morte como era esperado (ainda vai ser corrigido)

    Matsura (src, include) :
        -Implementação da tela de remoção de usuário (ainda não funcional)

14-06-2025

    Pedro(registration)
        - Correção de um bug que não removia o usuário do arquivo .txt

    Sam (game_loop)
        - Finalmente a tela de morte está funcionando e mostrando a pontuação
            - Ainda falta mostrar se é recorde ou não, mas aí precisa do max score do jogador

    Pedro(registration.cpp, testregistration.cpp, Makefile, doctest.h)
        - Inserção do arquivo de testes da classe "registration"
        - Mudança no makefile para compilar o teste de unidade
        - Inserção da biblioteca doctest.h no diretório "tests"

    Sam (game_loop, pipe_object)
        - Implementados os canos dourados

18-06-2025

    Sam (assets, home_screen):
        - Adicionados os sprites para os achievements
        - Iniciada a programação da home screen (nada pronto ainda)

    Sam (assets, home_screen, main):
        - Modificados alguns sprites de UI
        - Finalizada a home screen