@@ -3,11 +3,14 @@
 #include <fstream>
 #include <string>
 #include <set>
+#include <vector>
+#include <optional>
 
 //Struct com informações dos jogadores para auxiliar na lista de retorno  
 struct player{
-  std::string username;
-  int score, games;
+  std::string username = "";
+  int score = 0, games = 0;
+  std::vector<bool> achievements;
 
   //Sobrecarga no operador < para colocar em ordem descrescente de score dentro do container multiset
   bool operator < (const player& otherplayer) const{
@@ -23,7 +26,7 @@ private:
   std::string file;
 
   //Flag para checagem de abertura do arquivo
-  bool openfile_check;
+  bool openfile_check = false;
 
   //Armazena posição do jogador com maior score
   std::streampos pos_champion;
@@ -38,6 +41,7 @@ private:
   int getline_number(std::string user);
 
 public:
+  //Construtor da classe
   registration(std::string arquivo);
 
   //Verifica se o arquivo está vazio
@@ -47,13 +51,16 @@ public:
   void new_user(std::string name, std::string password, int score, int games);
 
   //Captura a linha com as infos do jogador
-  std::string get_stats(std::string name);
+  std::string get_stats(const std::string& name);
+
+  //Captura as informações do usuário e retorna o objeto preenchido
+  player get_player(const std::string& name);
 
   //Resgata as informações de todos os jogadores, exceto senha
   std::multiset<player> get_all();
 
-  //Atualiza o score do jogador
-  void update(std::string user, int score);
+  //Atualiza as informações do usuário
+  void update(player& player_stats);
 
   //Deleta o jogador
   int delete_user(std::string user);
